--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2>City of the Day</h2>
         <div class="flex-container">
              <div class="featured-city">
-                <img src="image/kabul.jpg" alt="Kabul" class="city-image">
+                <img src="image/Kabul.jpg" alt="Kabul" class="city-image">
 
                 <h3>Kabul</h3>
                 <p>Traditional food: Mantu and Ashak</p>
@@ -94,4 +94,5 @@
 
 </body>
 </html>
+
 
